# gpt2inf

./: .gitignore  CMakeLists.txt
docs/: architecture.md
include/: model.h  ops.h  sampler.h  tensor.h  timer.h  tokenizer.h
scripts/: export_weights.py  reference_forward.py
src/: main.cpp  model.cpp  ops_naive.cpp  ops_simd.cpp  tokenizer.cpp
